product-comparison completed

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Test\r Imagine, a MERN-based comparison page that lets you compare 2 products. The page URL may look something like this:\r  https://.../compare?productIds[]=p1001&productIds[]=p22\r This comparison page needs to show name, price, and ratings in a table for the 2 productIds in the URL. Mongo products table has fields {_id, name, price, ratings}.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
